# msbt-py

./: .gitmodules  CMakeLists.txt
pymsbt3/: CMakeLists.txt
pymsbt3/src/: wrapper.cpp  wrapper.h
src/: msbt.cpp
